--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "node scripts/generate-og.js && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
     "astro": "^5.16.9",
+    "satori": "^0.19.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18"
   }
 }
